fixed examples to mini-table format

--- a/lessons/basics/02_basics_2.html
+++ b/lessons/basics/02_basics_2.html
@@ -191,12 +191,14 @@ title: Elisa's Duo Polski - Polish basics 2
         <h3> Questions - Pytania </h3>
 
         <p>To make a sentence a question
-        You can add <span class="violet-text">Czy</span> at the beginning, or just add a question mark at the end.
+        You can add <span class="violet-text">Czy</span> at the beginning, or just add a question mark at the end.</p>
 
-        <span class="violet-text">Czy</span> jesteś głodna? - Are you hungry (♀)?
-        Masz dzieci? - Do you have children?
+        <table class="mini-table">
+            <tr><td> <span class="violet-text">Czy</span> jesteś głodna? </td><td> Are you hungry (♀)?</td></tr>
+            <tr><td> Masz dzieci? </td><td> Do you have children?</td></tr>
+        </table>
 
-        <b><span class="violet-text">Czy</span></b> means <b>whether</b>, <b>or</b>, or <b>if</b>. It can be used to start questions for other verbs.</p>
+        <p><b><span class="violet-text">Czy</span></b> means <b>whether</b>, <b>or</b>, or <b>if</b>. It can be used to start questions for other verbs.</p>
 
     </div>
     <div class="regular">
@@ -213,15 +215,18 @@ title: Elisa's Duo Polski - Polish basics 2
         
         Instrumental male, if it ends in <span class="blue-text">g</span> or <span class="blue-text">k</span>, <span class="red-text">i</span> is added before the instrumental <span class="red-text">em</span>
         <span class="blue-text">k</span> → <span class="blue-text">k</span><span class="red-text">iem</span>
-        <span class="blue-text">g</span>iem> → <span class="blue-text">g</span><span class="red-text">iem</span>
+        <span class="blue-text">g</span> → <span class="blue-text">g</span><span class="red-text">iem</span></p>
 
-        Chłopa<span class="blue-text">k</span><span class="red-text">iem</span>: Jesteś chłopa<span class="blue-text">k</span><span class="red-text">iem</span> - You are a (teenage) boy. 
+        <table class="mini-table">
+            <tr><td>Chłopa<span class="blue-text">k</span><span class="red-text">iem</span>: </td><td> Jesteś chłopa<span class="blue-text">k</span><span class="red-text">iem</span> </td><td> You are a (teenage) boy. </td></tr>
+        </table>
 
-        Instrumental female, same rules as before
-        <span class="blue-text">a</span> → <span class="red-text">ą</span>
+        <p>Instrumental female, same rules as before
+        <span class="blue-text">a</span> → <span class="red-text">ą</span></p>
 
-        Dziewczyn<span class="blue-text">a</span>: Jestem dziewczyn<span class="red-text">ą</span> - I am a (teenage) girl.
-        </p>
+        <table class="mini-table">
+            <tr><td> Dziewczyn<span class="blue-text">a</span>: </td><td> Jestem dziewczyn<span class="red-text">ą</span> </td><td> I am a (teenage) girl.</td></tr>
+        </table>
 
         <h4 >Accusative Case - Biernik </h4>
 
@@ -229,10 +234,11 @@ title: Elisa's Duo Polski - Polish basics 2
 
         The direct object - what is being affected by the verb? 
 
-        Accusative neuter (plural), so it doesn't change.
+        Accusative neuter (plural), so it doesn't change.</p>
 
-        Ciasteczka: One mają ciasteczka - (♀)They have cookies.
-        </p>
+        <table class="mini-table">
+            <tr><td> Ciasteczka: </td><td> One mają ciasteczka </td><td> (♀)They have cookies. </td></tr>
+        </table>
     </div>
 
     <div class="nav-buttons">
