--- a/lessons/basics/03_phrases.html
+++ b/lessons/basics/03_phrases.html
@@ -144,6 +144,8 @@ title: Elisa's Duo Polski - Basic Phrases
             <tr><td>Ona mówi dobranoc</td><td>She says goodnight</td></tr>
             <tr><td>One mówią cześć</td><td>They say hello</td></tr>
         </table>
+            <!--<p>Ona mówi dobranoc - She says goodnight
+            One mówią cześć - They say hello</p> -->
     </div>
     
     <div class="nav-buttons">
