--- a/lessons/basics/08_adjectives_1.html
+++ b/lessons/basics/08_adjectives_1.html
@@ -43,15 +43,19 @@ title: Elisa's Duo Polski - Adjectives 1
 
         Adjectives in polish have to follow declension depending on the noun and it’s gender. For now, we just need to know the nominative (<span class="violet-text">mianownik</span>) case. In order to search for it in the dictionary, you have to use the male declension of the nominative case. 
 
-        We can use adjectives before a noun (attributive), for example:
+        We can use adjectives before a noun (attributive), for example:</p>
 
-        The big dog eats meat - <span class="red-text">Duży</span> <span class="blue-text">pies</span> je mięso
+        <table class="mini-table">
+            <tr><td> The big dog eats meat </td><td> <span class="red-text">Duży</span> <span class="blue-text">pies</span> je mięso </td></tr>
+        </table>
 
-        You can also use the adjective after the noun in the predicate of the sentence (predicative), for example:
+        <p>You can also use the adjective after the noun in the predicate of the sentence (predicative), for example:</p>
 
-        This cat is small - Ten <span class="blue-text">kot</span> jest <span class="red-text">mały</span>
+        <table class="mini-table">
+            <tr><td> This cat is small </td><td> Ten <span class="blue-text">kot</span> jest <span class="red-text">mały</span></td></tr>
+        </table>
 
-        Now, notice how they follow the case of the noun: If the noun is in nominative, the adjective is in nominative. This means that if we were to say "I am a good human - Jestem dobr<span class="red-text">ym</span> człowiek<span class="red-text">iem</span>", we would have to use the instrumental (<span class="violet-text">narzędnik</span>) case, and that if we were to say “I am drinking this good tea - Piję tę dobr<span class="red-text">ą</span> herbat<span class="red-text">ę</span>”, we would have to use the accusative (<span class="violet-text">biernik</span>) case. In this lesson, however, we are only using the nominative (<span class="violet-text">mianownik</span>).
+        <p>Now, notice how they follow the case of the noun: If the noun is in nominative, the adjective is in nominative. This means that if we were to say "I am a good human - Jestem dobr<span class="red-text">ym</span> człowiek<span class="red-text">iem</span>", we would have to use the instrumental (<span class="violet-text">narzędnik</span>) case, and that if we were to say “I am drinking this good tea - Piję tę dobr<span class="red-text">ą</span> herbat<span class="red-text">ę</span>”, we would have to use the accusative (<span class="violet-text">biernik</span>) case. In this lesson, however, we are only using the nominative (<span class="violet-text">mianownik</span>).
 
         For the nominative (<span class="violet-text">mianownik</span>) case, the rules are easy:</p>
 
