--- a/lessons/checkpoint_1/09_plurals.html
+++ b/lessons/checkpoint_1/09_plurals.html
@@ -87,39 +87,53 @@ title: Elisa's Duo Polski - Plurals
 
         <p>Plurals of nouns have many different endings so it would be better to just memorize the words by themselves. However, a few patterns we can see:
 
-            Ending in -<span class="red-text">y</span> (sometimes replacing -<span class="blue-text">a</span>):
-            Kobiet<span class="blue-text">a</span> - Kobiet<span class="red-text">y</span>
-            Kot - Kot<span class="red-text">y</span>
+            Ending in -<span class="red-text">y</span> (sometimes replacing -<span class="blue-text">a</span>):</p>
+            <table class="mini-table">
+                <tr><td> Kobiet<span class="blue-text">a</span> </td><td> Kobiet<span class="red-text">y</span></td></tr>
+                <tr><td> Kot </td><td> Kot<span class="red-text">y</span></td></tr>
+            </table>
 
-            Ending in -<span class="red-text">y</span> after -<span class="blue-text">ie</span>:
-            Chłop<span class="blue-text">ie</span>c - Chłopc<span class="red-text">y</span>
-            P<span class="blue-text">ie</span>s - Ps<span class="red-text">y</span>
+            <p>Ending in -<span class="red-text">y</span> after -<span class="blue-text">ie</span>:</p>
 
-            Ending in -<span class="red-text">i</span> replacing -<span class="blue-text">a</span>:
-            Dziewczynk<span class="blue-text">a</span> - dziewczynk<span class="red-text">i</span>
-            Mężczyzn<span class="blue-text">a</span> - mężczyźn<span class="red-text">i</span>
+            <table class="mini-table">
+                <tr><td> Chłop<span class="blue-text">ie</span>c </td><td> Chłopc<span class="red-text">y</span></td></tr>
+                <tr><td> P<span class="blue-text">ie</span>s </td><td> Ps<span class="red-text">y</span></td></tr>
+            </table>
 
-            Ending in -<span class="red-text">ie</span> after a soft consonant (<span class="blue-text">ńść…</span>) and losing the diacritic
-            Ko<span class="blue-text">ń</span> - Ko<span class="red-text">nie</span>
-            Sło<span class="blue-text">ń</span> - sło<span class="red-text">nie</span> 
+            <p>Ending in -<span class="red-text">i</span> replacing -<span class="blue-text">a</span>:</p>
+            <table class="mini-table">
+                <tr><td> Dziewczynk<span class="blue-text">a</span> </td><td> dziewczynk<span class="red-text">i</span></td></tr>
+                <tr><td> Mężczyzn<span class="blue-text">a</span> </td><td> mężczyźn<span class="red-text">i</span></td></tr>
+            </table>
 
-            Ending in -<span class="blue-text">o</span> changes to -<span class="red-text">a</span>:
-            Jabłk<span class="blue-text">o</span> - jabłk<span class="red-text">a</span> 
-            Ciasteczk<span class="blue-text">o</span> - ciasteczk<span class="red-text">a</span>
+            <p>Ending in -<span class="red-text">ie</span> after a soft consonant (<span class="blue-text">ńść…</span>) and losing the diacritic</p>
+            <table class="mini-table">
+                <tr><td> Ko<span class="blue-text">ń</span> </td><td> Ko<span class="red-text">nie</span></td></tr>
+                <tr><td> Sło<span class="blue-text">ń</span> </td><td> sło<span class="red-text">nie</span> </td></tr>
+            </table>
 
-            And so on, but there’s many rules so let’s better remember each word.</p>
+            <p>Ending in -<span class="blue-text">o</span> changes to -<span class="red-text">a</span>:</p>
+            
+            <table class="mini-table">
+                <tr><td> Jabłk<span class="blue-text">o</span> </td><td> jabłk<span class="red-text">a</span> </td></tr>
+                <tr><td> Ciasteczk<span class="blue-text">o</span> </td><td> ciasteczk<span class="red-text">a</span></td></tr>
+            </table>
+
+            <p>And so on, but there’s many rules so let’s better remember each word.</p>
 
         <span class="section"> Practice exercises - Ćwiczyć ćwiczenia </span>
 
-        <p><span class="blue-text">Ryby</span> to mała zwierzęta. - Fish are small animals.
-            <span class="blue-text">Dziewczynki</span> lubią konie. - The girls like horses.
-            <span class="blue-text">Dziewczynki</span> lubią psy i koty.  - Girls like dogs and cats.*
-            <span class="blue-text">Psy</span> jedzą jabłka. - The dogs are eating apples.
-            To są <span class="blue-text">dzieci</span>. - These are children.
+        <table class="mini-table">
+            <tr><td> <span class="blue-text">Ryby</span> to mała zwierzęta. </td><td> Fish are small animals.</td></tr>
+            <tr><td> <span class="blue-text">Dziewczynki</span> lubią konie. </td><td> The girls like horses.</td></tr>
+            <tr><td> <span class="blue-text">Dziewczynki</span> lubią psy i koty.  </td><td> Girls like dogs and cats.*</td></tr>
+            <tr><td> <span class="blue-text">Psy</span> jedzą jabłka. </td><td> The dogs are eating apples.</td></tr>
+            <tr><td> To są <span class="blue-text">dzieci</span>. </td><td> These are children.</td></tr>
+        </table>
 
-            Notice that just like in singular “To jest + noun" will be in nominative, "To są + noun” will also be in nominative.
+        <p>Notice that just like in singular “To jest + noun" will be in nominative, "To są + noun” will also be in nominative.
 
-            *For some reason in English “cats and dogs” as in “it’s raining cats and dogs” is used in this order more often than the opposite. In Poland, most people would say “psy i koty”, while the opposite order is not incorrect, it is said less by the general public.</p>
+        *For some reason in English “cats and dogs” as in “it’s raining cats and dogs” is used in this order more often than the opposite. In Poland, most people would say “psy i koty”, while the opposite order is not incorrect, it is said less by the general public.</p>
 
         <h3> Nominative Plural Adjectives </h3>
 
@@ -127,34 +141,45 @@ title: Elisa's Duo Polski - Plurals
 
         <h4> Non-masculine personal (<span class="violet-text">niemęskoosobowy</span>) nominative plural adjectives </h4>
 
-        <p>Non-masculine personal (niemęskoosobowy) (abbreviated nmp.) plural (pl.) adjectives will end in -e in nominative. So anything that’s not a male human, will have adjectives ending with -e.
+        <p>Non-masculine personal (niemęskoosobowy) (abbreviated nmp.) plural (pl.) adjectives will end in -e in nominative. So anything that’s not a male human, will have adjectives ending with -e.</p>
 
-            Konie są duż<span class="red-text">e</span> - The horses are big
-            Jabłka są smaczn<span class="red-text">e</span> - The apples are tasty
-            Now<span class="red-text">e</span> dziewczynki - New girls
-            Star<span class="red-text">e</span> psy - old dogs</p>
+        <table class="mini-table">
+            <tr><td> Konie są duż<span class="red-text">e</span> </td><td> The horses are big</td></tr>
+            <tr><td> Jabłka są smaczn<span class="red-text">e</span> </td><td> The apples are tasty</td></tr>
+            <tr><td> Now<span class="red-text">e</span> dziewczynki </td><td> New girls</td></tr>
+            <tr><td> Star<span class="red-text">e</span> psy </td><td> old dogs</td></tr>
+        </table>
 
         <h4> Masculine personal (męski osobowy) nominative plural adjectives </h4>
 
         <p>On the other hand, masculine personal (<span class="violet-text">męski osobowy</span>) (abbreviated mp.) plural adjectives will end in -i , and if there’s an -r before it, it changes to -rzy.
 
-            -<span class="blue-text">ry</span> changes to to -<span class="red-text">rzy</span>:
-            Dob<span class="red-text">rzy</span> ludzie - Good people. (s. dobry)
-            Oni są sta<span class="red-text">rzy</span> - They are old. (s. stary)
+            -<span class="blue-text">ry</span> changes to to -<span class="red-text">rzy</span>:</p>
 
-            Ł,ż, ending in -i and loose the diacritics:
-            Ź<span class="red-text">li</span> mężczyźni - bad men (s. z<span class="blue-text">ły</span>)
-            Du<span class="red-text">zi</span> chłopcy i ma<span class="red-text">li</span> chłopcy - big boys and small boys (s. du<span class="blue-text">ży</span> s. ma<span class="blue-text">ły</span>)
+            <table class="mini-table">
+                <tr><td> Dob<span class="red-text">rzy</span> ludzie </td><td> Good people. (s. dobry)</td></tr>
+                <tr><td> Oni są sta<span class="red-text">rzy</span> </td><td> They are old. (s. stary)</td></tr>
+            </table>
 
-            Ending in -<span class="red-text">i</span>:
-            Now<span class="red-text">i</span> chłopcy - new boys (s. now<span class="blue-text">y</span>)
-            Smaczn<span class="red-text">i</span> chłopcy - tasty boys (s. smaczn<span class="blue-text">y</span>)</p>
+            <p>Ł,ż, ending in -i and loose the diacritics:</p>
+            <table class="mini-table">
+                <tr><td> Ź<span class="red-text">li</span> mężczyźni </td><td> bad men (s. z<span class="blue-text">ły</span>)</td></tr>
+                <tr><td> Du<span class="red-text">zi</span> chłopcy i ma<span class="red-text">li</span> chłopcy </td><td> big boys and small boys (s. du<span class="blue-text">ży</span> s. ma<span class="blue-text">ły</span>)</td></tr>
+            </table>
+
+            <p>Ending in -<span class="red-text">i</span>:</p>
+            <table class="mini-table">
+                <tr><td> Now<span class="red-text">i</span> chłopcy </td><td> new boys (s. now<span class="blue-text">y</span>)</td></tr>
+                <tr><td> Smaczn<span class="red-text">i</span> chłopcy </td><td> tasty boys (s. smaczn<span class="blue-text">y</span>) (said a monster from a fairy tale)</td></tr>
+            </table>
 
         <span class="section"> Practice exercises - Ćwiczyć ćwiczenia </span>
 
-        <p>Duże kobiety, duzi mężczyźni i duże dzieci - Big women, big men and big children
-            Mali chłopcy, małe dziewczynki - Little boys, little girls.
-            Są starzy - They are old (male they)</p>
+        <table class="mini-table">
+            <tr><td> Duże kobiety, duzi mężczyźni i duże dzieci </td><td> Big women, big men and big children</td></tr>
+            <tr><td> Mali chłopcy, małe dziewczynki </td><td> Little boys, little girls.</td></tr>
+            <tr><td> Są starzy </td><td> They are old (male they)</td></tr>
+        </table>
 
     </div>
 
@@ -176,13 +201,15 @@ title: Elisa's Duo Polski - Plurals
 
             Dziewczynka ma <span class="blue-text">ciasteczka</span> - The girl has cookies
 
-            This simple example shows us the accusative plural being the same as nominative, but we can use it from now on knowing for certain how it works:
+            This simple example shows us the accusative plural being the same as nominative, but we can use it from now on knowing for certain how it works:</p>
 
-            Chłopcy mają <span class="blue-text">psy</span> - The boys have dogs.
-            Mężczyźni jedzą <span class="blue-text">jajka</span> - The men are eating eggs.
-            Mamy <span class="blue-text">koty</span>. - We have cats.
+            <table class="mini-table">
+                <tr><td> Chłopcy mają <span class="blue-text">psy</span> </td><td> The boys have dogs. </td></tr>
+                <tr><td> Mężczyźni jedzą <span class="blue-text">jajka</span> </td><td> The men are eating eggs. </td></tr>
+                <tr><td> Mamy <span class="blue-text">koty</span>. </td><td> We have cats. </td></tr>
+            </table>
 
-            Now, Masculine personal pronouns are the same as in genitive, which we haven't seen yet, and Duolingo will probably not introduce yet.</p>
+            <p>Now, Masculine personal pronouns are the same as in genitive, which we haven't seen yet, and Duolingo will probably not introduce yet.</p>
 
         <h3> Accusative Plural Adjectives </h3>
 
@@ -190,12 +217,14 @@ title: Elisa's Duo Polski - Plurals
         <a href="https://mowicpopolsku.com/polish-grammar/cases/accusative/#adjective-plural">https://mowicpopolsku.com/polish-grammar/cases/accusative/#adjective-plural</a>
 
         For now, let's see non-masculine personal plural:
-        Accusative adjectives in nmp pl end in -<span class="red-text">e</span>.
+        Accusative adjectives in nmp pl end in -<span class="red-text">e</span>.</p>
 
-        Nowi chłopcy mają star<span class="red-text">e</span> psy - The new boys have old dogs.
-        Tamta kobieta ma duż<span class="red-text">e</span> konie - That woman has big horses.
+        <table class="mini-table">
+            <tr><td> Nowi chłopcy mają star<span class="red-text">e</span> psy </td><td> The new boys have old dogs. </td></tr>
+            <tr><td> Tamta kobieta ma duż<span class="red-text">e</span> konie </td><td> That woman has big horses. </td></tr>
+        </table>
 
-        Accusative adjectives in mp pl are -ych/ -ich.</p>
+        <p>Accusative adjectives in mp pl are -ych/ -ich.</p>
 
     </div>
 
@@ -209,24 +238,29 @@ title: Elisa's Duo Polski - Plurals
 
         <p><a href="https://mowicpopolsku.com/polish-grammar/cases/instrumental/#nouns-plural">https://mowicpopolsku.com/polish-grammar/cases/instrumental/#nouns-plural</a>
 
-        All nouns, regardless of gender, change from their ending in nominative plural to -<span class="red-text">ami</span>.
+        All nouns, regardless of gender, change from their ending in nominative plural to -<span class="red-text">ami</span>.</p>
 
-        Oni są mężczyzn<span class="red-text">ami</span> - They are men. (Mężczyźn<span class="blue-text">i</span>)
-        Jesteśmy kobiet<span class="red-text">ami</span> - We are women. (Kobiet<span class="blue-text">y</span>)
+        <table class="mini-table">
+            <tr><td> Oni są mężczyzn<span class="red-text">ami</span> </td><td> They are men. (Mężczyźn<span class="blue-text">i</span>)</td></tr>
+            <tr><td> Jesteśmy kobiet<span class="red-text">ami</span> </td><td> We are women. (Kobiet<span class="blue-text">y</span>)</td></tr>
+        </table>
+        <p>A few exceptions exist, even in this Duolingo lesson. Some words don't end in -ami, but instead remove the ending vowels, add a diacritic to the last consonant and end in -mi. </p>
 
-        A few exceptions exist, even in this Duolingo lesson. Some words don't end in -ami, but instead remove the ending vowels, add a diacritic to the last consonant and end in -mi. 
-
-        Wy jesteście lud<span class="red-text">źmi</span> - You are people. (Lud<span class="blue-text">zie</span>)
-        Nie jesteśmy dzie<span class="red-text">ćmi</span>! - We aren’t children! (Dzie<span class="blue-text">ci</span>)</p>
+        <table class="mini-table">
+            <tr><td> Wy jesteście lud<span class="red-text">źmi</span> </td><td> You are people. (Lud<span class="blue-text">zie</span>)</td></tr>
+            <tr><td> Nie jesteśmy dzie<span class="red-text">ćmi</span>! </td><td> We aren’t children! (Dzie<span class="blue-text">ci</span>)</td></tr>
+        </table>
 
         <span class="section"> Practice exercises - Ćwiczyć ćwiczenia </span>
 
-        <p>Chłopcy są dziećmi - Boys are children
-        One są ludźmi i my jesteśmy ludźmi - They are people and we are people.
-        Wy jesteście ludźmi - You are people
-        Jesteście dziećmi? - Are you children?
-        Wy jesteście mężczyznami, my jesteśmy kobietami - You are men, we are women.
-        One są kobietami - They are women.</p>
+        <table class="mini-table">
+            <tr><td> Chłopcy są dziećmi </td><td> Boys are children</td></tr>
+            <tr><td> One są ludźmi i my jesteśmy ludźmi </td><td> They are people and we are people.</td></tr>
+            <tr><td> Wy jesteście ludźmi </td><td> You are people</td></tr>
+            <tr><td> Jesteście dziećmi? </td><td> Are you children?</td></tr>
+            <tr><td> Wy jesteście mężczyznami, my jesteśmy kobietami </td><td> You are men, we are women.</td></tr>
+            <tr><td> One są kobietami </td><td> They are women.</td></tr>
+        </table>
 
         <h3> Instrumental Plural Adjectives - Narzędnik </h3>
 
@@ -234,11 +268,11 @@ title: Elisa's Duo Polski - Plurals
 
         I haven’t seen these show up in Duolingo, but well, we’re already here aren’t we?
 
-        All adjectives in the instrumental case in plural, regardless of gender, end in -ymi, except for adjectives that end in -g or -k, in which case they end in -imi.
-
-        Oni są dobr<span class="red-text">ymi</span> ludźmi - They are good people. 
-        Mój brat jeździ dro<span class="red-text">gimi</span> samochodami. - My brother drives expensive cars.</p>
-
+        All adjectives in the instrumental case in plural, regardless of gender, end in -ymi, except for adjectives that end in -g or -k, in which case they end in -imi.</p>
+        <table class="mini-table">
+            <tr><td> Oni są dobr<span class="red-text">ymi</span> ludźmi </td><td> They are good people. </td></tr>
+            <tr><td> Mój brat jeździ dro<span class="red-text">gimi</span> samochodami. </td><td> My brother drives expensive cars.</td></tr>
+        </table>
     </div>
 
     <div class="regular">
@@ -293,15 +327,16 @@ We also learned the way they change in accusative: Ten, tego, tę, to, tamten, t
 
         <span class="section"> Practice exercises - Ćwiczyć ćwiczenia </span>
 
-        <p><span class="blue-text">Ci</span> ludzie jedzą kaczki - These people eat ducks
-            <span class="blue-text">Tamci</span> mali chłopcy i <span class="blue-text">tamte</span> małe dziewczynki - Those little boys and those little girls
-            <span class="blue-text">Tamte</span> kobiety jedzą posiłek - Those women are eating a meal
-            <span class="blue-text">Ci</span> mężczyźni lubią jabłka - These men like apples. 
-            <span class="blue-text">Te</span> kanapki są smaczne - These sandwiches are tasty.
-            <span class="blue-text">Ci</span> chłopcy mają kanapkę - These boys have a sandwich.
-            <span class="blue-text">Tamte</span> kobiety jedzą ciasteczka - Those women are eating cookies.
-            <span class="blue-text">Te</span> kobiety i tamten mężczyzna jedzą obiad - These women and that man are eating lunch.</p>
-
+        <table class="mini-table">
+            <tr><td> <span class="blue-text">Ci</span> ludzie jedzą kaczki </td><td> These people eat ducks</td></tr>
+            <tr><td> <span class="blue-text">Tamci</span> mali chłopcy i <span class="blue-text">tamte</span> małe dziewczynki </td><td> Those little boys and those little girls</td></tr>
+            <tr><td> <span class="blue-text">Tamte</span> kobiety jedzą posiłek </td><td> Those women are eating a meal</td></tr>
+            <tr><td> <span class="blue-text">Ci</span> mężczyźni lubią jabłka </td><td> These men like apples. </td></tr>
+            <tr><td> <span class="blue-text">Te</span> kanapki są smaczne </td><td> These sandwiches are tasty.</td></tr>
+            <tr><td> <span class="blue-text">Ci</span> chłopcy mają kanapkę </td><td> These boys have a sandwich.</td></tr>
+            <tr><td> <span class="blue-text">Tamte</span> kobiety jedzą ciasteczka </td><td> Those women are eating cookies.</td></tr>
+            <tr><td> <span class="blue-text">Te</span> kobiety i tamten mężczyzna jedzą obiad </td><td> These women and that man are eating lunch.</td></tr>
+        </table>
     </div>
 
     <div class="nav-buttons">
