fixed verbs tables and added lesson 10_clothing

--- a/lessons/basics/01_basics_1.html
+++ b/lessons/basics/01_basics_1.html
@@ -181,20 +181,20 @@ title: Elisa's Duo Polski - Polish basics 1
                     <th colspan="3">Plural<br>Liczba mnoga</th>
                 </tr>
                 <tr>
-                    <td>1 os.</td>
-                    <td>2 os.</td>
-                    <td>3 os.</td>
-                    <td>1 os.</td>
-                    <td>2 os.</td>
-                    <td>3 os.</td>
+                    <th>1 os.</th>
+                    <th>2 os.</th>
+                    <th>3 os.</th>
+                    <th>1 os.</th>
+                    <th>2 os.</th>
+                    <th>3 os.</th>
                 </tr>
                 <tr>
-                    <td>Ja</td>
-                    <td>Ty</td>
-                    <td>On/Ona/<br>Ono/To</td>
-                    <td>My</td>
-                    <td>Wy</td>
-                    <td>Oni/One/To</td>
+                    <th>Ja</th>
+                    <th>Ty</th>
+                    <th>On/Ona/<br>Ono/To</th>
+                    <th>My</th>
+                    <th>Wy</th>
+                    <th>Oni/One/To</th>
                 </tr>
             </thead>
             <tbody>
