--- a/lessons/checkpoint_1/10_clothing.html
+++ b/lessons/checkpoint_1/10_clothing.html
@@ -129,8 +129,8 @@ title: Elisa's Duo Polski - Clothing
             <tr><td> Chłopcy noszą kurtki </td><td> The boy wears jackets </td></tr>
             <tr><td> Wy nosicie małe czapki </td><td> You wear small caps </td></tr>
             <tr><td> Ona nosi czapkę </td><td> She wears a cap </td></tr>
-            <tr><td> Ona ma nowe majtki </td><td> She has new panties* (remember plural nmp. adjectives end in -e.) </td></tr>
-            <tr><td> On nosi stare spodnie </td><td> He wears old trousers* (remember plural nmp. adjectives end in -e.) </td></tr>
+            <tr><td> Ona ma now<span class="dark-blue-text">e</span> majtki </td><td> She has new panties* (remember plural nmp. adjectives end in -e.) </td></tr>
+            <tr><td> On nosi star<span class="dark-blue-text">e</span> spodnie </td><td> He wears old trousers* (remember plural nmp. adjectives end in -e.) </td></tr>
         </table>
 
     </div>
