Added 11 present and fixed some tables

--- a/lessons/basics/01_basics_1.html
+++ b/lessons/basics/01_basics_1.html
@@ -143,13 +143,13 @@ title: Elisa's Duo Polski - Polish basics 1
         <p>Now let’s revise the lessons vocabulary:</p>
 
         <table class="mini-table">
-            <!-- <thead>
+            <thead>
               <tr>
                 <th></th>
                 <th>In Polish<br>Po polsku</th>
                 <th>In English<br>Po angielsku</th>
               </tr>
-            </thead> -->
+            </thead>
             <tbody>
                 <tr><td>♂</td> <td>Mężczyzna    </td> <td>Man                       </td></tr>
                 <tr><td>♀</td> <td>Kobieta      </td> <td>Woman                     </td></tr>
