--- a/lessons/basics/02_basics_2.html
+++ b/lessons/basics/02_basics_2.html
@@ -113,10 +113,19 @@ title: Elisa's Duo Polski - Polish basics 2
         <h4> Singular - Liczba Pojedyncza </h4>
 
         <table class="mini-table">
-            <tr><td>⚲</td> <td>Dziecko      </td> <td>Child                             </td></tr>
-            <tr><td>♂</td> <td>Chłopak      </td> <td>Boy (teenage boy, boyfriend)      </td></tr>
-            <tr><td>♀</td> <td>Dziewczyna   </td> <td>Girl (teenage girl, girlfriend)   </td></tr>
-            <tr><td>⚲</td> <td>Ciasteczko   </td> <td>Cookie *                          </td></tr>
+            <thead>
+              <tr>
+                <th></th>
+                <th>In Polish<br>Po polsku</th>
+                <th>In English<br>Po angielsku</th>
+              </tr>
+            </thead>
+            <tbody>
+                <tr><td>⚲</td> <td>Dziecko      </td> <td>Child                             </td></tr>
+                <tr><td>♂</td> <td>Chłopak      </td> <td>Boy (teenage boy, boyfriend)      </td></tr>
+                <tr><td>♀</td> <td>Dziewczyna   </td> <td>Girl (teenage girl, girlfriend)   </td></tr>
+                <tr><td>⚲</td> <td>Ciasteczko   </td> <td>Cookie *                          </td></tr>
+            </tbody>
         </table>
 
         <h4> Plural - Liczba Mnoga </h4>
@@ -124,10 +133,19 @@ title: Elisa's Duo Polski - Polish basics 2
         <p>From now on pl. will be the abbreviation for plural.</p>
 
         <table class="mini-table">
-            <tr><td>pl. ⚲</td> <td>Dziecko          </td> <td>Child                </td></tr>
-            <tr><td>pl. ♀</td> <td>Dziewczynki      </td> <td>Girls (little girls) </td></tr>
-            <tr><td>pl. ♂</td> <td>Chłopcy          </td> <td>Boys (little boys)   </td></tr>
-            <tr><td>pl. ⚲</td> <td>Ciasteczka       </td> <td>Cookies *            </td></tr>
+            <thead>
+              <tr>
+                <th></th>
+                <th>In Polish<br>Po polsku</th>
+                <th>In English<br>Po angielsku</th>
+              </tr>
+            </thead>
+            <tbody>
+                <tr><td>pl. ⚲</td> <td>Dziecko          </td> <td>Child                </td></tr>
+                <tr><td>pl. ♀</td> <td>Dziewczynki      </td> <td>Girls (little girls) </td></tr>
+                <tr><td>pl. ♂</td> <td>Chłopcy          </td> <td>Boys (little boys)   </td></tr>
+                <tr><td>pl. ⚲</td> <td>Ciasteczka       </td> <td>Cookies *            </td></tr>
+            </tbody>
         </table>
 
     </div>
