--- a/lessons/basics/04_animals_1.html
+++ b/lessons/basics/04_animals_1.html
@@ -69,6 +69,13 @@ title: Elisa's Duo Polski - Animals 1
         <p> Neuter nouns - Rzeczowniki nijakie </p>
 
         <table class="mini-table">
+            <thead>
+              <tr>
+                <th></th>
+                <th>In Polish<br>Po polsku</th>
+                <th>In English<br>Po angielsku</th>
+              </tr>
+            </thead>
             <tbody>
                 <tr><td>⚲</td> <td>Zwierzę</td> <td>Animal *</td></tr>
             </tbody>
