--- a/lessons/basics/06_defining.html
+++ b/lessons/basics/06_defining.html
@@ -24,6 +24,13 @@ title: Elisa's Duo Polski - Defining
         <h3>  Nouns - Rzeczowniki </h3>
 
         <table class="mini-table">
+            <thead>
+              <tr>
+                <th></th>
+                <th>In Polish<br>Po polsku</th>
+                <th>In English<br>Po angielsku</th>
+              </tr>
+            </thead>
             <tbody>
                 <tr><td>♂</td> <td>Człowiek</td> <td>Human</td></tr>
                 <tr><td>⚲</td> <td>Warzywo</td> <td>Vegetable</td></tr>
