--- a/lessons/basics/08_adjectives_1.html
+++ b/lessons/basics/08_adjectives_1.html
@@ -24,13 +24,22 @@ title: Elisa's Duo Polski - Adjectives 1
         <p>As we said before in the Food lesson, in order to search for it in the dictionary, you have to use the male declension of the nominative case of an adjective, so that's what I'll list under here for vocabulary.</p>
 
         <table class="mini-table">
-            <tr><td>♂</td><td>Dobry </td> <td>Good</td></tr>
-            <tr><td>♂</td><td>Zły </td> <td>Bad, Angry, Evil</td></tr>
-            <tr><td>♂</td><td>Duży </td> <td>Big, Large</td></tr>
-            <tr><td>♂</td><td>Mały </td> <td>Small, Little</td></tr>
-            <tr><td>♂</td><td>Nowy </td> <td>New</td></tr>
-            <tr><td>♂</td><td>Stary </td> <td>Old</td></tr>
-            <tr><td>♂</td><td>Smaczny </td> <td>Tasty</td></tr>
+            <thead>
+              <tr>
+                <th></th>
+                <th>In Polish<br>Po polsku</th>
+                <th>In English<br>Po angielsku</th>
+              </tr>
+            </thead>
+            <tbody>
+                <tr><td>♂</td><td>Dobry </td> <td>Good</td></tr>
+                <tr><td>♂</td><td>Zły </td> <td>Bad, Angry, Evil</td></tr>
+                <tr><td>♂</td><td>Duży </td> <td>Big, Large</td></tr>
+                <tr><td>♂</td><td>Mały </td> <td>Small, Little</td></tr>
+                <tr><td>♂</td><td>Nowy </td> <td>New</td></tr>
+                <tr><td>♂</td><td>Stary </td> <td>Old</td></tr>
+                <tr><td>♂</td><td>Smaczny </td> <td>Tasty</td></tr>
+            </tbody>
         </table>
 
         <h2> Grammar - Gramatyka </h2>
