correction on negation nav

--- a/lessons/checkpoint_1/12_negation.html
+++ b/lessons/checkpoint_1/12_negation.html
@@ -12,7 +12,7 @@ title: Elisa's Duo Polski - Negation
     </div>
 
     <div class="nav-buttons">
-        <div class="nav-btn"><a href="/lessons/checkpoint_1/10_clothing.html"> ← Clothing</a></div>
+        <div class="nav-btn"><a href="/lessons/checkpoint_1/11_present_1.html"> ← Present 1</a></div>
         <div class="nav-btn"><a href="/lessons#checkpoint_1">Checkpoint 1</a></div>
         <div class="nav-btn"><a href="/lessons/checkpoint_1/13_possessive_pronouns.html">Possession → </a></div>
     </div>
@@ -132,7 +132,7 @@ title: Elisa's Duo Polski - Negation
     </div>
 
     <div class="nav-buttons">
-        <div class="nav-btn"><a href="/lessons/checkpoint_1/10_clothing.html"> ← Clothing</a></div>
+        <div class="nav-btn"><a href="/lessons/checkpoint_1/11_present_1.html"> ← Present 1</a></div>
         <div class="nav-btn"><a href="/lessons#checkpoint_1">Checkpoint 1</a></div>
         <div class="nav-btn"><a href="/lessons/checkpoint_1/13_possessive_pronouns.html">Possession → </a></div>
     </div>
