added checkpoint crown and lesson 16, finished check1

--- a/lessons/basics/08_adjectives_1.html
+++ b/lessons/basics/08_adjectives_1.html
@@ -216,6 +216,8 @@ title: Elisa's Duo Polski - Adjectives 1
 
     </div>
 
+    <div class="checkpoint"> ♛ Checkpoint 1 ♛ </div>
+
     <div class="nav-buttons">
         <div class="nav-btn"><a href="/lessons/basics/07_demonstrating.html"> ← Demonstrating</a></div>
         <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
