removed note about wujek and red mistake

--- a/lessons/checkpoint_1/16_family.html
+++ b/lessons/checkpoint_1/16_family.html
@@ -169,9 +169,7 @@ title: Elisa's Duo Polski - Family
 
         <p>We didn't get all the plurals used in this lesson, but I included them just to learn more. Notice how the male family members are pluralized ending in -owie most of the time.
 
-        One note… in the dictionary I couldn’t find wujek, but wujko for uncle, though the synonyms stated wujek also meant the same. I’ll look into it.
-
-        Also to note: Małżeństwo means both the institution of marriage, and the couple.
+        Note: Małżeństwo means both the institution of marriage, and the couple.
         For example:</p>
 
         <table class="mini-table">
@@ -290,7 +288,7 @@ title: Elisa's Duo Polski - Family
             <tr><td> Mąż <span class="red-text">tej kobiety</span> nie mówi po angielsku </td><td> This woman’s husband does not speak English </td></tr>
             <tr><td> <br> </td></tr>
             <tr><td> And though it wasn’t in the lesson: <br> <br> </td></tr>
-            <tr><td> That boy‘s mother </td><td> Matka t<span class="red-text">amtego chłopca</span> </td></tr>
+            <tr><td> That boy‘s mother </td><td> Matka <span class="red-text">tamtego chłopca</span> </td></tr>
         </table>
 
         <p>Now that we know genitive nouns and pronouns, there’s many more sentence structures we can make. We’re making progress in speaking a little bit more of Polish! Yay!</p>
